# Tommaso_Puzzo_lab_programmazione

./: CMakeLists.txt  Chat.cpp  Chat.h  ChatLog.cpp  ChatLog.h  ChatMessage.cpp  ChatMessage.h  Observer.cpp  Observer.h  Subject.cpp  Subject.h  SystemUser.cpp  SystemUser.h  main.cpp
tests/: CMakeLists.txt  ChatMessageFixture.cpp  SystemUserFixture.cpp  runAllTests.cpp
